// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sets up the right view hierarchy 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "black",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "black",
          "height": "100%",
          "maxWidth": 540,
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <View
      keyboardVerticalOffset={15}
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignContent": "center",
              "flexGrow": 1,
              "justifyContent": "flex-end",
              "marginLeft": 20,
              "marginRight": 20,
              "marginTop": 20,
            }
          }
        >
          <View
            style={
              Array [
                undefined,
                Object {
                  "flex": 1,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#cccccc",
                      "fontFamily": "AGaramondPro-Regular",
                      "fontSize": 20,
                      "marginTop": 5,
                      "position": "absolute",
                      "width": "100%",
                      "zIndex": -1,
                    },
                    undefined,
                  ]
                }
              >
                Add notes about how you aquired the work. If you’re not sure add any details about how long you’ve had the work.
              </Text>
              <TextInput
                autoCapitalize="sentences"
                autoFocus={false}
                keyboardAppearance="dark"
                multiline={true}
                onChangeText={[Function]}
                selectionColor="#cccccc"
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "color": "white",
                      "flexBasis": 0,
                      "flexGrow": 1,
                      "flexShrink": 1,
                      "fontFamily": "AGaramondPro-Regular",
                      "fontSize": 20,
                      "height": "100%",
                    },
                    undefined,
                  ]
                }
                value={undefined}
              />
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#e5e5e5",
              "height": 1,
            },
            undefined,
          ]
        }
      />
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "black",
            "height": 56,
            "marginBottom": 0,
            "opacity": 1,
            "paddingTop": 18,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "white",
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "fontFamily": "Avant Garde Gothic ITCW01Dm",
                "fontSize": 14,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          DONE
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`with an existing state Sets up the right view hierarchy 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "black",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "black",
          "height": "100%",
          "maxWidth": 540,
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <View
      keyboardVerticalOffset={15}
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignContent": "center",
              "flexGrow": 1,
              "justifyContent": "flex-end",
              "marginLeft": 20,
              "marginRight": 20,
              "marginTop": 20,
            }
          }
        >
          <View
            style={
              Array [
                undefined,
                Object {
                  "flex": 1,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <TextInput
                autoCapitalize="sentences"
                autoFocus={false}
                keyboardAppearance="dark"
                multiline={true}
                onChangeText={[Function]}
                selectionColor="#cccccc"
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "color": "white",
                      "flexBasis": 0,
                      "flexGrow": 1,
                      "flexShrink": 1,
                      "fontFamily": "AGaramondPro-Regular",
                      "fontSize": 20,
                      "height": "100%",
                    },
                    undefined,
                  ]
                }
                value="Acquired by my father somewhere"
              />
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#e5e5e5",
              "height": 1,
            },
            undefined,
          ]
        }
      />
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "black",
            "height": 56,
            "marginBottom": 0,
            "opacity": 1,
            "paddingTop": 18,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "white",
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "fontFamily": "Avant Garde Gothic ITCW01Dm",
                "fontSize": 14,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          DONE
        </Text>
      </View>
    </View>
  </View>
</View>
`;
